--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -27,6 +27,9 @@ vitam:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
         acceptableRequestTime: 10 # value in seconds
+        # metricslevel: DEBUG
+        # metricsinterval: 3
+        # metricsunit: MINUTES
     library:
         vitam_component: library
         host: "library.service.{{consul_domain}}"
@@ -45,6 +48,9 @@ vitam:
         consul_check_business: 30 # value in seconds
         consul_admin_check: 30 # value in seconds
         acceptableRequestTime: 10 # value in seconds
+        # metricslevel: DEBUG
+        # metricsinterval: 3
+        # metricsunit: MINUTES
 
 # Period units in seconds
 metricbeat:
