Item 5928 : Update DignedObjectDigest mapping

--- a/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
+++ b/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
@@ -948,7 +948,14 @@
               "type": "keyword"
             },
             "SignedObjectDigest": {
-              "type": "object"
+              "properties": {
+                "Algorithm": {
+                  "type": "keyword"
+                },
+                "MessageDigest": {
+                  "type": "keyword"
+                }
+              }
             }
           }
         }
