--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -109,3 +109,4 @@ permissionsWithoutPersonalCertificate:
   - 'preservationreport:id:read'
   - 'logbookoperations:create'
   - 'computeInheritedRules:action'
+  - 'computeInheritedRules:delete'
