fixing dependances in modules + start moving computedInheritedRules worklfow launch

--- a/deployment/ansible-vitam/roles/metadata/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/metadata/tasks/main.yml
@@ -24,6 +24,7 @@
   with_items:
     - reconstruction.sh
     - storegraph.sh
+    - computed_inherited_rules.sh
     - reconstruction_payload.json
 
 - name: Copy the metadata reconstruction conf
