--- a/sources/worker/worker-core/pom.xml
+++ b/sources/worker/worker-core/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>batch-report-client</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
+            <artifactId>metadata-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
