--- a/sources/common/common-private/pom.xml
+++ b/sources/common/common-private/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>batik-css</artifactId>
         </dependency>
         <dependency>
+            <groupId>xml-resolver</groupId>
+            <artifactId>xml-resolver</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.owasp.antisamy</groupId>
             <artifactId>antisamy</artifactId>
             <exclusions>
