--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -1,4 +1,5 @@
 workspaceUrl: http://workspace.service.consul:8201/
+urlProcessing: http://processing.service.consul:8203/
 
 # Archive Unit Profile cache settings (max entries in cache & retention timeout in seconds)
 archiveUnitProfileCacheMaxEntries: 100
