Stupid fix : no copy/paste...

--- a/sources/integration-test/src/test/resources/common/metadata.conf
+++ b/sources/integration-test/src/test/resources/common/metadata.conf
@@ -10,4 +10,4 @@ elasticsearchNodes:
   - hostName: localhost
     tcpPort: 9300
 workspaceUrl: http://localhost:8094
-urlProcessing: urlProcessing: http://localhost:8097
+urlProcessing: http://localhost:8097
