--- a/sources/integration-test/src/test/resources/integration-metadata-migration/metadata.conf
+++ b/sources/integration-test/src/test/resources/integration-metadata-migration/metadata.conf
@@ -12,3 +12,5 @@ elasticsearchNodes:
 adminBasicAuth:
 - userName: user
   password: pwd
+workspaceUrl: http://localhost:8094
+urlProcessing: http://localhost:8097
