--- a/deployment/ansible-vitam/roles/consul/tasks/consul_enabled.yml
+++ b/deployment/ansible-vitam/roles/consul/tasks/consul_enabled.yml
@@ -72,7 +72,7 @@
     marker: "# {mark} ANSIBLE MANAGED BLOCK"
     block: |
       nameserver 127.0.0.1
-  when: inventory_hostname != 'localhost'
+  when: inventory_hostname not in single_vm_hostnames
 
 - block:
 
