--- a/deployment/ansible-vitam/roles/consul/tasks/consul_disabled.yml
+++ b/deployment/ansible-vitam/roles/consul/tasks/consul_disabled.yml
@@ -46,4 +46,4 @@
     block: |
       nameserver 127.0.0.1
     state: absent
-  when: inventory_hostname != 'localhost'
+  when: inventory_hostname not in single_vm_hostnames
