--- a/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/check_elasticsearch.yml
+++ b/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/check_elasticsearch.yml
@@ -7,7 +7,9 @@
     url: "http://{{ elasticsearch.data.host }}:{{ elasticsearch.data.port_http }}/_cluster/health"
     body_format: "json"
   register: result
-  until: result.json.status == "green"
+  until:
+    - result.json is defined
+    - result.json.status == "green"
   retries: "{{ vitam_defaults.services.api_call_timeout }}"
   delay: 10
   delegate_to: "{{ groups['hosts-elasticsearch-data']|first }}"
