Fix: Less hardcoded versions in functional-test module

--- a/sources/functional-test/pom.xml
+++ b/sources/functional-test/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>1.2.5</version>
+            <version>${cucumber-java.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>info.cukes</groupId>
@@ -55,19 +55,19 @@
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.4.11.1</version>
+            <version>${xstream.version}</version>
         </dependency>
 
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-picocontainer</artifactId>
-            <version>1.2.5</version>
+            <version>${cucumber-picocontainer.version}</version>
         </dependency>
 
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>1.2.5</version>
+            <version>${cucumber-junit.version}</version>
         </dependency>
 
         <dependency>
