Item #5881 : add ManagementContractId field in IngestContract

--- a/sources/functional-administration/functional-administration-common/src/main/resources/ingestcontract-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/ingestcontract-es-mapping.json
@@ -59,6 +59,9 @@
     "FormatType": {
       "type": "keyword"
     },
+    "ManagementContractId": {
+      "type": "keyword"
+    },
     "_tenant": {
       "type": "long"
     },
