--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -52,6 +52,8 @@ vitam:
         # metricsinterval: 3
         # metricsunit: MINUTES
 
+tenant_to_clean_before_tnr: ["0","1"]
+
 # Period units in seconds
 metricbeat:
     system:
