Fix reverse autostart

--- a/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
@@ -186,3 +186,9 @@
     - update_package_vitam
   notify:
      - reload apache
+
+- name: Ensure Apache autostart && Apache is started
+  service:
+    name: "{{ apache_service }}"
+    enabled: yes
+    state: started
