item_5781_computedInheritedRules_in_IngestContract

--- a/sources/functional-administration/functional-administration-common/src/main/resources/ingestcontract-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/ingestcontract-es-mapping.json
@@ -53,6 +53,9 @@
     "FormatUnidentifiedAuthorized": {
       "type": "boolean"
     },
+    "ComputeInheritedRulesAtIngest": {
+      "type": "boolean"
+    },
     "EveryFormatType": {
       "type": "boolean"
     },
