--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -181,6 +181,24 @@
         <cucumber-picocontainer.version>1.2.5</cucumber-picocontainer.version>
         <cucumber-junit.version>1.2.5</cucumber-junit.version>
         <xstream.version>1.4.11.1</xstream.version>
+        <batik-css.version>1.11</batik-css.version>
+        <antisamy.version>1.5.8</antisamy.version>
+        <jdeb.vafer.version>1.5</jdeb.vafer.version>
+        <json-schema-core.version>1.2.5</json-schema-core.version>
+        <maven-scm-plugin.version>1.9.4</maven-scm-plugin.version>
+        <json-patch.version>1.9</json-patch.version>
+        <jackson-coreutils.version>1.8</jackson-coreutils.version>
+        <git-commit-id-plugin.version>2.2.1</git-commit-id-plugin.version>
+        <maven-antrun-plugin.version>1.6</maven-antrun-plugin.version>
+        <license-maven-plugin.version>1.16</license-maven-plugin.version>
+        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+        <maven-verifier-plugin.version>1.1</maven-verifier-plugin.version>
+        <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
+        <maven-help-plugin.version>2.2</maven-help-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <sonar-maven-plugin.version>3.2</sonar-maven-plugin.version>
+        <versions-maven-plugin.version>2.3</versions-maven-plugin.version>
+        <maven-scm-provider-jgit.version>1.9.4</maven-scm-provider-jgit.version>
     </properties>
 
 
@@ -290,7 +308,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>license-maven-plugin</artifactId>
-                    <version>1.16</version>
+                    <version>${license-maven-plugin.version}</version>
                     <configuration>
                         <offline>true</offline>
                     </configuration>
@@ -345,7 +363,7 @@
                 <plugin>
                     <!-- Install the built artifact into the local repository. -->
                     <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>${maven-install-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <!-- Copy the resources to the output directory for including in the
@@ -432,7 +450,7 @@
                     <!-- Useful for integration tests - verifies the existence of certain
                         conditions. -->
                     <artifactId>maven-verifier-plugin</artifactId>
-                    <version>1.1</version>
+                    <version>${maven-verifier-plugin.version}</version>
                 </plugin>
 
                 <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
@@ -558,7 +576,8 @@
                         under ${basedir}/target/surefire-reports and renders them to DOXIA which
                         creates the web interface version of the test results. -->
                     <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>2.19.1</version>
+                    <!-- <version>2.19.1</version> -->
+                    <version>${maven.surefire.version}</version>
                 </plugin>
                 <plugin>
                     <!-- Security check for dependencies -->
@@ -613,19 +632,19 @@
                     <!-- Environmental constraint checking (Maven Version, JDK etc), User
                         Custom Rule Execution. -->
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.4.1</version>
+                    <version>${maven-enforcer-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <!-- Get information about the working environment for the project. -->
                     <artifactId>maven-help-plugin</artifactId>
-                    <version>2.2</version>
+                    <version>${maven-help-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <!-- SCM plugin ; set as using jgit for git (essentially for the release
                         plugin) -->
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-scm-plugin</artifactId>
-                    <version>1.9.4</version>
+                    <version>${maven-scm-plugin.version}</version>
                     <configuration>
                         <providerImplementations>
                             <git>jgit</git>
@@ -635,7 +654,7 @@
                         <dependency>
                             <groupId>org.apache.maven.scm</groupId>
                             <artifactId>maven-scm-provider-jgit</artifactId>
-                            <version>1.9.4</version>
+                            <version>${maven-scm-plugin.version}</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -643,7 +662,7 @@
                     <!-- Release the current project - updating the POM and tagging in the
                         SCM. -->
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.3</version>
+                    <version>${maven-release-plugin.version}</version>
                     <configuration>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                         <!-- Ask only once per SNAPSHOT artifact -->
@@ -661,7 +680,7 @@
                         <dependency>
                             <groupId>org.apache.maven.scm</groupId>
                             <artifactId>maven-scm-provider-jgit</artifactId>
-                            <version>1.9.4</version>
+                            <version>${maven-scm-provider-jgit.version}</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -675,14 +694,14 @@
                     <!-- Maven/Sonarqube integration -->
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
-                    <version>3.2</version>
+                    <version>${sonar-maven-plugin.version}</version>
                 </plugin>
 
                 <plugin>
                     <!-- Debian packaging -->
                     <artifactId>jdeb</artifactId>
                     <groupId>org.vafer</groupId>
-                    <version>1.5</version>
+                    <version>${jdeb.vafer.version}</version>
                     <configuration>
                         <deb>${project.build.directory}/vitam-${unix.name}-${project.version}.deb</deb>
                         <snapshotExpand>true</snapshotExpand>
@@ -832,7 +851,7 @@
                     <!-- When everything else fails... -->
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.6</version>
+                    <version>${maven-antrun-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>process-test-classes</id>
@@ -852,13 +871,13 @@
                     <!-- Versions handling -->
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.3</version>
+                    <version>${versions-maven-plugin.version}</version>
                 </plugin>
                 <!-- Get git versions information -->
                 <plugin>
                     <groupId>pl.project13.maven</groupId>
                     <artifactId>git-commit-id-plugin</artifactId>
-                    <version>2.2.1</version>
+                    <version>${git-commit-id-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>get-the-git-infos</id>
@@ -1201,12 +1220,12 @@
             <dependency>
                 <groupId>org.apache.xmlgraphics</groupId>
                 <artifactId>batik-css</artifactId>
-                <version>1.11</version>
+                <version>${batik-css.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.owasp.antisamy</groupId>
                 <artifactId>antisamy</artifactId>
-                <version>1.5.8</version>
+                <version>${antisamy.version}</version>
             </dependency>
 
             <dependency>
@@ -1352,17 +1371,17 @@
             <dependency>
                 <groupId>com.github.fge</groupId>
                 <artifactId>json-schema-core</artifactId>
-                <version>1.2.5</version>
+                <version>${json-schema-core.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.fge</groupId>
                 <artifactId>json-patch</artifactId>
-                <version>1.9</version>
+                <version>${json-patch.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.fge</groupId>
                 <artifactId>jackson-coreutils</artifactId>
-                <version>1.8</version>
+                <version>${jackson-coreutils.version}</version>
             </dependency>
 
             <dependency>
