--- a/sources/ihm-demo/ihm-demo-front/pom.xml
+++ b/sources/ihm-demo/ihm-demo-front/pom.xml
@@ -26,7 +26,6 @@
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>2.5</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -43,7 +42,7 @@
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
-                <version>1.3</version>
+                <version>${frontend-maven-plugin.version}</version>
 
                 <configuration>
                     <installDirectory>target</installDirectory>
@@ -120,7 +119,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.3</version>
+                <version>${build-helper-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-distribution</id>
