--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -100,12 +100,15 @@
         <javax.ws.rs.version>2.1.1</javax.ws.rs.version>
         <openstack4j.version>3.2.0</openstack4j.version>
         <awssdk.v1.version>1.11.488</awssdk.v1.version>
+        <!-- <awssdk.v1.version>1.11.618</awssdk.v1.version> -->
         <thaiopensource.version>20091111</thaiopensource.version>
         <guava.version>27.0.1-jre</guava.version>
         <log4j2.version>2.11.1</log4j2.version>
+        <!-- <log4j2.version>2.12.1</log4j2.version> -->
         <commons-logging.version>1.2</commons-logging.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3>3.8.1</commons-lang3>
+        <!-- <commons-lang3>3.9</commons-lang3> -->
         <easymock.version>4.0.2</easymock.version>
         <jackson-databind.version>2.9.9.2</jackson-databind.version>
         <jackson.version>2.9.9</jackson.version>
@@ -114,8 +117,10 @@
         <mongo.version>3.11.0</mongo.version>
         <apache-shiro.version>1.4.0</apache-shiro.version>
         <jetty.version>9.4.18.v20190429</jetty.version>
+        <!-- <jetty.version>9.4.20.v20190813</jetty.version> -->
         <assertj.version>3.11.1</assertj.version>
         <rest-assured.version>3.3.0</rest-assured.version>
+        <!-- <rest-assured.version>4.0.0</rest-assured.version> -->
         <junit.version>4.12</junit.version>
         <mockito.version>2.23.4</mockito.version>
         <flapdoodle.version>2.1.1</flapdoodle.version>
@@ -123,10 +128,12 @@
         <staxon.version>1.3</staxon.version>
         <org.json.version>20180813</org.json.version>
         <json-unit-version>2.3.0</json-unit-version>
+        <!-- <json-unit-version>2.8.0</json-unit-version> -->
         <jhades.version>1.0.4</jhades.version>
         <javax.servlet.version>4.0.1</javax.servlet.version>
         <json-sanitize.version>1.2.0</json-sanitize.version>
         <commons-collections4.version>4.2</commons-collections4.version>
+        <!-- <commons-collections4.version>4.4</commons-collections4.version> -->
         <unix.user>vitam</unix.user>
         <unix.group>vitam</unix.group>
         <esapi.version>2.1.0.1</esapi.version>
@@ -135,14 +142,18 @@
         <xml-resolver.version>1.2</xml-resolver.version>
         <opencsv.version>2.3</opencsv.version>
         <commons-csv.version>1.6</commons-csv.version>
+        <!-- <commons-csv.version>1.7</commons-csv.version> -->
         <bouncycastle.version>1.60</bouncycastle.version>
         <diffutils.version>1.3.0</diffutils.version>
         <jaxb2.version>1.0.2</jaxb2.version>
         <httpclient.version>4.5.7</httpclient.version>
+        <!-- <httpclient.version>4.5.9</httpclient.version> -->
         <netty.version>4.1.31.Final</netty.version>
         <commons-compress.version>1.18</commons-compress.version>
         <easystream.version>1.2.15</easystream.version>
-        <zjsonpatch.version>0.4.7</zjsonpatch.version>
+        <!-- <zjsonpatch.version>0.4.7</zjsonpatch.version> -->
+        <zjsonpatch.version>0.4.9</zjsonpatch.version>
+
         <!-- Metrics -->
         <metrics.version>4.1.0-rc3</metrics.version>
         <metrics.jvm.version>4.1.0-rc3</metrics.jvm.version>
@@ -155,28 +166,32 @@
         <hibernate-validator.version>6.0.0.Final</hibernate-validator.version>
         <org.glassfish.web.version>2.2.6</org.glassfish.web.version>
         <javax.el-api.version>3.0.0</javax.el-api.version>
-        <retrofit2.version>2.5.0</retrofit2.version>
+        <retrofit2.version>2.6.1</retrofit2.version>
         <maven.rpm-maven-plugin.version>2.2.0</maven.rpm-maven-plugin.version>
-        <org.xmlunit.version>2.6.2</org.xmlunit.version>
-        <com.github.tomakehurst.version>2.21.0</com.github.tomakehurst.version>
-        <io.reactivex.rxjava2.version>2.2.6</io.reactivex.rxjava2.version>
-        <maven.surefire.version>2.22.1</maven.surefire.version>
-        <maven.clean.version>3.1.0</maven.clean.version>
-        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <org.xmlunit.version>2.6.3</org.xmlunit.version>
+        <com.github.tomakehurst.version>2.24.1</com.github.tomakehurst.version>
+        <io.reactivex.rxjava2.version>2.2.12</io.reactivex.rxjava2.version>
+        <maven.surefire.version>2.22.2</maven.surefire.version>
+        <maven.clean.version>3.0.0</maven.clean.version>
+        <!-- <maven.clean.version>3.1.0</maven.clean.version> -->
+        <maven.compiler.version>3.5.1</maven.compiler.version>
+        <!-- <maven.compiler.version>3.8.2</maven.compiler.version> -->
         <maven.deploy.version>2.8.2</maven.deploy.version>
         <maven.resources.version>3.1.0</maven.resources.version>
-        <maven.source.version>3.1.0</maven.source.version>
+        <maven.source.version>3.0.0</maven.source.version>
+        <!-- <maven.source.version>3.1.0</maven.source.version> -->
         <maven.dependency.version>3.1.1</maven.dependency.version>
-        <maven.site.version>3.8.2</maven.site.version>
+        <maven.site.version>3.5.1</maven.site.version>
+        <!-- <maven.site.version>3.8.2</maven.site.version> -->
         <maven.assembly.version>3.1.1</maven.assembly.version>
         <maven.exec.version>1.6.0</maven.exec.version>
         <maven.failsafe.version>2.19.1</maven.failsafe.version>
-        <maven.javadoc.version>3.1.1</maven.javadoc.version>
+        <maven.javadoc.version>2.10.4</maven.javadoc.version>
         <maven.exec.version>1.6.0</maven.exec.version>
 	    <maven.dependencycheck.version>5.2.1</maven.dependencycheck.version>
         <xalan.version>2.7.2</xalan.version>
         <nodeDownloadRoot/>
-        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
         <cucumber-java.version>1.2.5</cucumber-java.version>
         <cucumber-picocontainer.version>1.2.5</cucumber-picocontainer.version>
         <cucumber-junit.version>1.2.5</cucumber-junit.version>
@@ -184,21 +199,34 @@
         <batik-css.version>1.11</batik-css.version>
         <antisamy.version>1.5.8</antisamy.version>
         <jdeb.vafer.version>1.5</jdeb.vafer.version>
+        <!-- <jdeb.vafer.version>1.8</jdeb.vafer.version> -->
         <json-schema-core.version>1.2.5</json-schema-core.version>
         <maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
         <json-patch.version>1.9</json-patch.version>
         <jackson-coreutils.version>1.8</jackson-coreutils.version>
-        <git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version>
+        <git-commit-id-plugin.version>2.2.1</git-commit-id-plugin.version>
+        <!-- <git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version> -->
         <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
-        <license-maven-plugin.version>1.20</license-maven-plugin.version>
+        <!-- <maven-antrun-plugin.version>1.6</maven-antrun-plugin.version> -->
+        <license-maven-plugin.version>1.16</license-maven-plugin.version>
+        <!-- <license-maven-plugin.version>1.20</license-maven-plugin.version> -->
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
         <maven-verifier-plugin.version>1.1</maven-verifier-plugin.version>
         <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
-        <maven-help-plugin.version>3.2.0</maven-help-plugin.version>
+        <maven-help-plugin.version>2.2</maven-help-plugin.version>
+        <!-- <maven-help-plugin.version>3.2.0</maven-help-plugin.version> -->
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <sonar-maven-plugin.version>3.2</sonar-maven-plugin.version>
-        <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
+        <versions-maven-plugin.version>2.3</versions-maven-plugin.version>
+        <!-- <versions-maven-plugin.version>2.7</versions-maven-plugin.version> -->
         <maven-scm-provider-jgit.version>1.9.4</maven-scm-provider-jgit.version>
+        <!-- <maven-scm-provider-jgit.version>1.11.2</maven-scm-provider-jgit.version> -->
+        <maven.jaxb2.version>0.13.1</maven.jaxb2.version>
+        <jaxb2-basics.version>0.6.5</jaxb2-basics.version>
+        <frontend-maven-plugin.version>1.3</frontend-maven-plugin.version>
+        <!-- <frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version> -->
+        <build-helper-maven-plugin.version>1.3</build-helper-maven-plugin.version>
+        <!-- <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version> -->
     </properties>
 
 
@@ -291,9 +319,9 @@
                                 </goals>
                             </execution>
                         </executions>
-                        <configuration>
+                        <!-- <configuration>
                             <doclint>none</doclint>
-                        </configuration>
+                        </configuration> -->
                     </plugin>
                 </plugins>
             </build>
@@ -501,7 +529,7 @@
                     <version>${maven.javadoc.version}</version>
                     <configuration>
                         <source>${java.version}</source>
-                        <doclint>none</doclint>
+                        <additionalparam>-Xdoclint:none</additionalparam>
                         <doctitle>Vitam API Reference (${project.version})</doctitle>
                         <windowtitle>Vitam API Reference (${project.version})</windowtitle>
                         <excludePackageNames>
