--- a/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/init_ontologies.yml
+++ b/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/init_ontologies.yml
@@ -37,6 +37,7 @@
         status_code: 200,201
         url: "http://{{ hostvars[groups['hosts-functional-administration'][0]]['ip_admin'] }}:{{ vitam.functional_administration.port_admin }}/v1/admin/ontologies"
         body_format: "json"
+        timeout: "{{ vitam_defaults.services.api_long_call_timeout }}"
         headers:
           X-Tenant-Id: "{{ vitam_tenant_admin }}"
           Force-Update: "true"
