--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -26,6 +26,7 @@ vitam_defaults:
         stop_timeout: 3600
         port_service_timeout: 86400
         api_call_timeout: 120
+        api_long_call_timeout: 300
         status_retries_number: 60
         status_retries_delay: 5
     # Filter for the vitam package version to install
