Fix update read request by archive id

--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -4,12 +4,10 @@ outputTarStorageFolder: ""
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
 useSudo: true
+forceOverrideNonEmptyCartridges: False
+archiveRetentionCacheTimeoutInMinutes: 30
 
 topology:
-  fileBuckets:
-    metadata: ['unit', 'objectGroup']
-    objects: ['object']
-    default: []
   buckets:
     test:
       tenants: [0]
