--- a/deployment/environments/group_vars/all/offers_opts.yml.example
+++ b/deployment/environments/group_vars/all/offers_opts.yml.example
@@ -100,6 +100,7 @@ vitam_offers:
             mtPath: "/bin/mt"
             ddPath: "/bin/dd"
             tarPath: "/bin/tar"
+            readWritePriority: READ
             timeoutInMilliseconds: 3600000
   offer-fs-1:
     # param can be filesystem-hash (recomended) or filesystem (not recomended)
